Pontoon: Update Dutch (nl) localization of Firefox Co-authored-by: Mark Heijl <markh@babelzilla.org> Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/nl/devtools/client/netmonitor.properties
+++ b/nl/devtools/client/netmonitor.properties
@@ -874,10 +874,12 @@ netmonitor.actionbar.addBlockedUrl=Patroon toevoegen
 
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
+netmonitor.actionbar.requestBlockingUsageNotice=Voeg hier URL-patronen toe om overeenkomende verzoeken te blokkeren.
 
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
 # add notice that explains ways to add blocking pattern that is displayed when
 # network blocking list is empty
+netmonitor.actionbar.requestBlockingAddNotice=Begin met het toevoegen van een patroon of een rij uit de netwerktabel te slepen.
 
 # LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
 # context menu item for removing all blocked URLs
@@ -1114,6 +1116,7 @@ netmonitor.headers.size=Grootte
 # LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
 # in the network details headers tab providing the size details.
 # %1$S is the transferred size, %2$S is the size.
+netmonitor.headers.sizeDetails=%1$S (grootte %2$S)
 
 # LOCALIZATION NOTE (netmonitor.headers.version): This is the label displayed
 # in the network details headers tab identifying the http version.
@@ -1129,9 +1132,11 @@ netmonitor.summary.referrerPolicy=Referrer-beleid:
 
 # LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
+netmonitor.headers.referrer=Referrer
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
+netmonitor.headers.contentBlocking=Blokkeren
 
 # LOCALIZATION NOTE (netmonitor.summary.editAndResend): This is the label displayed
 # on the button in the headers tab that opens a form to edit and resend the currently
