--- a/nl/netwerk/necko.properties
+++ b/nl/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Toegang tot opslag automatisch verlee
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Toegang tot opslag automatisch verleend voor tracker ‘%2$S’ op ‘%1$S’.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Toegang tot opslag verleend voor oorsprong ‘%2$S’ op ‘%1$S’.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Toegang tot opslag automatisch verleend voor oorsprong ‘%2$S’ op ‘%1$S’.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Toegang tot opslag automatisch verleend voor isolatie van rechtstreekse cookie ‘%2$S’ op ‘%1$S’.
 
