--- a/nn-NO/devtools/client/debugger.properties
+++ b/nn-NO/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=Show inline preview
 # for hiding the inline preview block
 inlinePreview.hide.label=Hide inline preview
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.toggle.label=Inline Variable Preview
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Show inline preview in the debugger editor
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Debugger Settings
 
@@ -696,6 +704,14 @@ settings.disableJavaScript.label=Disable JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Disables JavaScript (Requires refresh)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+settings.toggleSourceMaps.tooltip=Enable Source Maps to let DevTools load your original sources in addition to your generated ones
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Source Maps
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
