Pontoon: Update Vietnamese (vi) localization of Firefox Co-authored-by: Quế Tùng <best.cloney.1301@gmail.com>

--- a/vi/devtools/client/debugger.properties
+++ b/vi/devtools/client/debugger.properties
@@ -654,6 +654,29 @@ downloadFile.accesskey=d
 # LOCALIZATION NOTE (inlinePreview.hide.label): Context menu item
 # for hiding the inline preview block
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Cài đặt trình gỡ lỗi
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Vô hiệu hóa JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Vô hiệu hóa JavaScript (yêu cầu làm mới)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 
@@ -1230,4 +1253,3 @@ WebIDLTooltip=WebIDL
 # service worker that is redundant.
 # LOCALIZATION NOTE (serviceWorkerInfo.unknown): State displayed for a
 # service worker that is in an unknown state.
-
