Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/devtools/client/debugger.properties
+++ b/hu/devtools/client/debugger.properties
@@ -686,6 +686,12 @@ inlinePreview.show.label=Soron belüli előnézet megjelenítése
 # for hiding the inline preview block
 inlinePreview.hide.label=Soron belüli előnézet elrejtése
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Hibakereső beállításai
 
@@ -696,6 +702,13 @@ settings.disableJavaScript.label=JavaScript kikapcsolása
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Kikapcsolja a JavaScriptet (frissítést igényel)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Forrástérképek
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
