Pontoon: Update Portuguese (Portugal) (pt-PT) localization of Firefox Co-authored-by: Cláudio Esperança <cesperanc@gmail.com>

--- a/pt-PT/devtools/client/debugger.properties
+++ b/pt-PT/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=Mostrar pré-visualização em linha
 # for hiding the inline preview block
 inlinePreview.hide.label=Ocultar pré-visualização em linha
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.toggle.label=Pré-visualização de variável em linha
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Mostrar a pré-visualização em linha no editor do depurador
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Definições do depurador
 
@@ -696,6 +704,14 @@ settings.disableJavaScript.label=Desativar JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Desativa o JavaScript (é necessário atualizar)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+settings.toggleSourceMaps.tooltip=Ative os mapas da fonte para permitir que as DevTools carreguem o código original, para além do código gerado
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Mapas de fonte
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
