Pontoon: Update Portuguese (Portugal) (pt-PT) localization of Firefox Co-authored-by: Cláudio Esperança <cesperanc@gmail.com>

--- a/pt-PT/devtools/client/netmonitor.properties
+++ b/pt-PT/devtools/client/netmonitor.properties
@@ -1286,6 +1286,7 @@ netmonitor.trackingResource.tooltip=Este URL corresponde a um rastreador conheci
 
 # LOCALIZATION NOTE (netmonitor.trackingResource.enhancedTrackingProtection): This is 
 # the label used in the Network monitor panel for showing enhanced tracking protection.
+netmonitor.trackingResource.enhancedTrackingProtection=Proteção melhorada contra a monitorização
 
 # LOCALIZATION NOTE (netmonitor.context.copy): This is the label displayed
 # for the copy sub-menu in the context menu for a request
