--- a/oc/devtools/client/debugger.properties
+++ b/oc/devtools/client/debugger.properties
@@ -686,6 +686,13 @@ inlinePreview.show.label=Afichar l’apercebut en linha
 # for hiding the inline preview block
 inlinePreview.hide.label=Amagar l’apercebut en linha
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.toggle.label=Apercebut de las variables en linha
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Paramètres de desbugatge
 
@@ -696,6 +703,13 @@ settings.disableJavaScript.label=Desactivar JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Desactivar JavaScript (Requerís un recargament)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Mapas font
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
