--- a/oc/devtools/client/netmonitor.properties
+++ b/oc/devtools/client/netmonitor.properties
@@ -1134,6 +1134,7 @@ netmonitor.headers.referrer=Referrer
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
+netmonitor.headers.contentBlocking=Blocatge
 
 # LOCALIZATION NOTE (netmonitor.summary.editAndResend): This is the label displayed
 # on the button in the headers tab that opens a form to edit and resend the currently
