Pontoon: Update Basque (eu) localization of Firefox Co-authored-by: osoitz <osoitz@gmx.com> Co-authored-by: Osoitz <oelkoro@gmail.com>

--- a/eu/dom/chrome/accessibility/mac/accessible.properties
+++ b/eu/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       nagusia
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      alerta
 alertDialog =      alerta-koadroa
+dialog      =      elkarrizketa-koadroa
 article     =      artikulua
 document    =      dokumentua
 # The (spoken) role description for the WAI-ARIA figure role
