--- a/eu/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/eu/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Eguneratu
 updateLoginButtonAccessKey = E
 updateLoginButtonDeny.label = Ez eguneratu
 updateLoginButtonDeny.accesskey = E
+updateLoginButtonDelete.label = Kendu gordetako saio-hasiera
+updateLoginButtonDelete.accesskey = R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
