--- a/eu/toolkit/chrome/global/narrate.properties
+++ b/eu/toolkit/chrome/global/narrate.properties
@@ -6,6 +6,10 @@
 # and it is the label for the popup button.
 narrate = Narratu
 
+# "Listen, which allows users to listen to Firefox reading the text, 
+# instead of having to read it themselves." This is the name
+# of the feature and it is the label for the popup button.
+listen = Entzun
 back = Atzera
 start = Hasi
 stop = Gelditu
