Pontoon: Update Basque (eu) localization of Firefox Co-authored-by: Osoitz <oelkoro@gmail.com>

--- a/eu/browser/chrome/browser/browser.properties
+++ b/eu/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Ainguratuta!
 confirmationHint.pinTab.description = Desainguratzeko, egin eskuin-klika fitxan.
 
 confirmationHint.passwordSaved.label = Pasahitza gordeta!
+confirmationHint.loginRemoved.label = Saio-hasiera kenduta!
 confirmationHint.breakageReport.label = Txostena bidalita. Eskerrik asko!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
