--- a/eu/devtools/client/netmonitor.properties
+++ b/eu/devtools/client/netmonitor.properties
@@ -286,6 +286,7 @@ networkMenu.blocked2=Blokeatuta
 # LOCALIZATION NOTE (networkMenu.blockedby): This is a generic message for a
 # URL that has been blocked by an extension
 # %S is the extension name.
+networkMenu.blockedby=%S(e)k blokeatuta
 
 # LOCALIZATION NOTE (networkMenu.blockedTooltip): This is a the text displayed
 # as a tooltip for the blocked icon in the request list
