--- a/eu/toolkit/chrome/global/aboutReader.properties
+++ b/eu/toolkit/chrome/global/aboutReader.properties
@@ -44,6 +44,7 @@ aboutReader.toolbar.typeControls=Tipografia-kontrolak
 # This is used as a label for the Reader View toolbar button.
 # This is a label used for the Save to Pocket option in the toolbar.
 # %S is replaced by Pocket.
+readerView.savetopocket.label=Gorde hemen: %S
 # This is a label used for done option in the toolbar
 readerView.done.label=Eginda
 # These are used for the Reader View toolbar button and the menuitem within the
