Pontoon: Update Occitan (oc) localization of Firefox Co-authored-by: Quentí <quentinantonin@free.fr>

--- a/oc/devtools/client/debugger.properties
+++ b/oc/devtools/client/debugger.properties
@@ -938,7 +938,7 @@ welcome.search2=%S Anar al fichièr
 # LOCALIZATION NOTE (welcome.findInFiles): The center pane welcome panel's
 # search prompt. e.g. cmd+f to search for files. On windows, it's ctrl+shift+f, on
 # a mac we use the unicode character.
-welcome.findInFiles=%S per trobar dins los dossièrs
+welcome.findInFiles=%S per cercar dins los dossièrs
 
 # LOCALIZATION NOTE (welcome.findInFiles2): The center pane welcome panel's
 # search prompt. e.g. cmd+f to search for files. On windows, it's ctrl+shift+f, on
