Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -631,7 +631,7 @@ fileEmptyMsg = La dosiero %S estas malplena.
 # construct strings that look like (for example) "1 more" or "20 more".
 # <https://developer.mozilla.org/en/Localization_and_Plurals> has details
 # on this mechanism.
-headerMoreAddrs=#1 more;#1 more
+headerMoreAddrs=#1 pli;#1 pli
 
 # LOCALIZATION NOTE (headerMoreAddrsTooltip): semicolon separated list of
 # plural forms of the phrase ", and #1 more" as used in the tooltip text
@@ -801,4 +801,3 @@ aboutDialog.architecture.thirtyTwoBit = 32-bit
 # LOCALIZATION NOTE (panel.back):
 # This is used by screen readers to label the "back" button in various browser
 # popup panels, including the sliding subviews of the appmenu.
-
