Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -640,37 +640,37 @@ headerMoreAddrs=#1 pli;#1 pli
 # look like (for example) ", and 1 more" or ", and 20 more".
 # <https://developer.mozilla.org/en/Localization_and_Plurals> has details
 # on this mechanism.
-headerMoreAddrsTooltip=, and #1 more;, and #1 more
+headerMoreAddrsTooltip=kaj #1 pli; kaj #1 pli
 
 # LOCALIZATION NOTE (headertoFieldMe): first person prepositional object
 # pronoun used in the "to" header of the message header pane.  This is also
 # used for the fallback case if a header-specific localization is not
 # available.
-headertoFieldMe=Me
+headertoFieldMe=mi
 
 # LOCALIZATION NOTE (headerfromFieldMe): first person prepositional object
 # pronoun used in the "from" header of the message header pane.
-headerfromFieldMe=Me
+headerfromFieldMe=mi
 
 # LOCALIZATION NOTE (headerreply-toFieldMe): first person prepositional
 # object pronoun used in the "reply-to" header of the message header pane.
-headerreply-toFieldMe=Me
+headerreply-toFieldMe=mi
 
 # LOCALIZATION NOTE (headerccFieldMe): first person prepositional object
 # pronoun used in the "cc" header of the message header pane.
-headerccFieldMe=Me
+headerccFieldMe=mi
 
 # LOCALIZATION NOTE (headerbccFieldMe): first person prepositional object
 # pronoun used in the "bcc" header of the message header pane.
-headerbccFieldMe=Me
+headerbccFieldMe=mi
 
-expandAttachmentPaneTooltip=Show the attachment pane
-collapseAttachmentPaneTooltip=Hide the attachment pane
+expandAttachmentPaneTooltip=Montri liston de kunsendaĵoj
+collapseAttachmentPaneTooltip=Kaŝi liston de kunsendaĵoj
 
 # Shown when content tabs are being loaded.
-loadingTab=Loading…
+loadingTab=Ŝargado…
 
-confirmMsgDelete.title=Confirm Deletion
+confirmMsgDelete.title=Konfirmi forigon
 confirmMsgDelete.collapsed.desc=This will delete messages in collapsed threads. Are you sure you want to continue?
 confirmMsgDelete.deleteNoTrash.desc=This will delete messages immediately, without saving a copy to Trash. Are you sure you want to continue?
 confirmMsgDelete.deleteFromTrash.desc=This will permanently delete messages from Trash. Are you sure you want to continue?
