Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -671,11 +671,11 @@ collapseAttachmentPaneTooltip=Kaŝi liston de kunsendaĵoj
 loadingTab=Ŝargado…
 
 confirmMsgDelete.title=Konfirmi forigon
-confirmMsgDelete.collapsed.desc=This will delete messages in collapsed threads. Are you sure you want to continue?
-confirmMsgDelete.deleteNoTrash.desc=This will delete messages immediately, without saving a copy to Trash. Are you sure you want to continue?
-confirmMsgDelete.deleteFromTrash.desc=This will permanently delete messages from Trash. Are you sure you want to continue?
-confirmMsgDelete.dontAsk.label=Don't ask me again.
-confirmMsgDelete.delete.label=Delete
+confirmMsgDelete.collapsed.desc=La mesaĝoj en maletenditaj fadenoj estos forigitaj. Ĉu pluigi?
+confirmMsgDelete.deleteNoTrash.desc=La mesaĝoj estos forigitaj, sen konservi iliajn kopiojn en la rubujo. Ĉu pluigi?
+confirmMsgDelete.deleteFromTrash.desc=La mesaĝoj en la rubujo estos neinversigeble forigitaj. Ĉu pluigi?
+confirmMsgDelete.dontAsk.label=Ne demandi denove.
+confirmMsgDelete.delete.label=Forigi
 
 mailServerLoginFailedTitle=Login Failed
 # LOCALIZATION NOTE (mailServerLoginFailedTitleWithAccount):
