Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -677,10 +677,10 @@ confirmMsgDelete.deleteFromTrash.desc=La mesaĝoj en la rubujo estos neinversige
 confirmMsgDelete.dontAsk.label=Ne demandi denove.
 confirmMsgDelete.delete.label=Forigi
 
-mailServerLoginFailedTitle=Login Failed
+mailServerLoginFailedTitle=Fiaskis ensaluti
 # LOCALIZATION NOTE (mailServerLoginFailedTitleWithAccount):
 # "%S" is the account name.
-mailServerLoginFailedTitleWithAccount=Login to account "%S" failed
+mailServerLoginFailedTitleWithAccount=Malsukcesis ensaluti al la konto “%S”
 # LOCALIZATION NOTE (mailServerLoginFailed2):
 # %1$S is the host name of the server, %2$S is the user name.
 mailServerLoginFailed2=Login to server %1$S with username %2$S failed.
