--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -683,9 +683,9 @@ mailServerLoginFailedTitle=Fiaskis ensaluti
 mailServerLoginFailedTitleWithAccount=Malsukcesis ensaluti al la konto “%S”
 # LOCALIZATION NOTE (mailServerLoginFailed2):
 # %1$S is the host name of the server, %2$S is the user name.
-mailServerLoginFailed2=Login to server %1$S with username %2$S failed.
-mailServerLoginFailedRetryButton=&Retry
-mailServerLoginFailedEnterNewPasswordButton=&Enter New Password
+mailServerLoginFailed2=Malsukcesis ensaluti al la servilo %1$S per la salutnomo “%2$S”.
+mailServerLoginFailedRetryButton=&Reprovi
+mailServerLoginFailedEnterNewPasswordButton=&Enigi novan pasvorton
 
 # LOCALIZATION NOTE (threadPane.columnPicker.confirmFolder.noChildren.title):
 # When the user selects a folder to apply the currently displayed columns to
@@ -693,7 +693,7 @@ mailServerLoginFailedEnterNewPasswordButton=&Enter New Password
 # the confirmation dialog used to verify they selected the correct folder.  This
 # is the case in which we apply the columns only to the folder and not to any of
 # its children.
-threadPane.columnPicker.confirmFolder.noChildren.title=Apply Changes?
+threadPane.columnPicker.confirmFolder.noChildren.title=Ĉu apliki ŝanĝojn?
 # LOCALIZATION NOTE (threadPane.columnPicker.confirmFolder.noChildren.message):
 # When the user selects a folder to apply the currently displayed columns to
 # via the "columnPicker.applyToFolder.label" menu option, this is the text of
@@ -702,7 +702,7 @@ threadPane.columnPicker.confirmFolder.noChildren.title=Apply Changes?
 # order to help them confirm they picked what they thought they picked.  This
 # is the case in which we apply the columns only to the folder and not to any of
 # its children.
-threadPane.columnPicker.confirmFolder.noChildren.message=Apply the current folder's columns to %S?
+threadPane.columnPicker.confirmFolder.noChildren.message=Ĉu apliki aranĝon de kolumnoj de la nuna mesaĝujo al “%S”?
 
 # LOCALIZATION NOTE (threadPane.columnPicker.confirmFolder.withChildren.title):
 # When the user selects a folder to apply the currently displayed columns to via
@@ -710,7 +710,7 @@ threadPane.columnPicker.confirmFolder.noChildren.message=Apply the current folde
 # title of the confirmation dialog used to verify they selected the correct
 # folder.  This is the case in which we apply the columns to the folder and all
 # of its children.
-threadPane.columnPicker.confirmFolder.withChildren.title=Apply Changes?
+threadPane.columnPicker.confirmFolder.withChildren.title=Ĉu apliki ŝanĝojn?
 # LOCALIZATION NOTE (threadPane.columnPicker.confirmFolder.withChildren.message):
 # When the user selects a folder to apply the currently displayed columns to via
 # the "columnPicker.applyToFolderAndChildren.label" menu option, this is the
