--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -719,7 +719,7 @@ threadPane.columnPicker.confirmFolder.withChildren.title=Ĉu apliki ŝanĝojn?
 # selected in order to help them confirm they picked what they thought they
 # picked.  This is the case in which we apply the columns to the folder and all
 # of its children.
-threadPane.columnPicker.confirmFolder.withChildren.message=Apply the current folder's columns to %S and its children?
+threadPane.columnPicker.confirmFolder.withChildren.message=Ĉu apliki aranĝon de kolumnoj de la nuna mesaĝujo al “%S” kaj ĉiuj ĝiaj submesaĝujoj?
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
