Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -723,25 +723,25 @@ threadPane.columnPicker.confirmFolder.withChildren.message=Ĉu apliki aranĝon d
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
-lwthemeInstallRequest.message=This site (%S) attempted to install a theme.
-lwthemeInstallRequest.allowButton=Allow
-lwthemeInstallRequest.allowButton.accesskey=a
+lwthemeInstallRequest.message=Tiu ĉi retejo (%S) provas instali etoson.
+lwthemeInstallRequest.allowButton=Permesi
+lwthemeInstallRequest.allowButton.accesskey=P
 
-lwthemePostInstallNotification.message=A new theme has been installed.
-lwthemePostInstallNotification.undoButton=Undo
-lwthemePostInstallNotification.undoButton.accesskey=U
-lwthemePostInstallNotification.manageButton=Manage Themes…
-lwthemePostInstallNotification.manageButton.accesskey=M
+lwthemePostInstallNotification.message=Nova etoso estas instalita.
+lwthemePostInstallNotification.undoButton=Malfari
+lwthemePostInstallNotification.undoButton.accesskey=M
+lwthemePostInstallNotification.manageButton=Administri etosojn…
+lwthemePostInstallNotification.manageButton.accesskey=A
 
 # safeModeRestart
-safeModeRestartPromptTitle=Restart with Add-ons Disabled
-safeModeRestartPromptMessage=Are you sure you want to disable all add-ons and restart?
-safeModeRestartButton=Restart
+safeModeRestartPromptTitle=Restartigi kun aldonaĵoj malaktivigitaj
+safeModeRestartPromptMessage=Ĉu vi certe volas malaktivigi ĉiujn aldonaĵojn kaj restartigi la programon?
+safeModeRestartButton=Restartigi
 
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
-update.downloadAndInstallButton.label=Update to %S
-update.downloadAndInstallButton.accesskey=U
+update.downloadAndInstallButton.label=Ĝisdatigi al %S
+update.downloadAndInstallButton.accesskey=i
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
