Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -747,25 +747,25 @@ update.downloadAndInstallButton.accesskey=i
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
 # clear" is set to "Everything", the Clear Recent History dialog's title is
 # changed to this.  See UI mockup and comment 11 at bug 480169 -->
-sanitizeDialog2.everything.title=Clear All History
-sanitizeButtonOK=Clear Now
+sanitizeDialog2.everything.title=Forviŝi tutan historion
+sanitizeButtonOK=Forviŝi nun
 # LOCALIZATION NOTE (sanitizeEverythingWarning2): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
 # provided that the user has not modified the default set of history items to clear.
-sanitizeEverythingWarning2=All history will be cleared.
+sanitizeEverythingWarning2=La tuta historio estos forviŝita.
 # LOCALIZATION NOTE (sanitizeSelectedWarning): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
 # provided that the user has modified the default set of history items to clear.
-sanitizeSelectedWarning=All selected items will be cleared.
+sanitizeSelectedWarning=Ĉiuj elektitaj elementoj estos forviŝitaj.
 
-learnMoreAboutIgnoreThread=Learn More…
-learnMoreAboutIgnoreThreadAccessKey = L
-undoIgnoreThread=Undo Ignore Thread
-undoIgnoreThreadAccessKey=U
-undoIgnoreSubthread=Undo Ignore Subthread
-undoIgnoreSubthreadAccessKey=U
+learnMoreAboutIgnoreThread=Pliaj informoj…
+learnMoreAboutIgnoreThreadAccessKey = P
+undoIgnoreThread=Malfari ignori fadenon
+undoIgnoreThreadAccessKey=M
+undoIgnoreSubthread=Malfari ignori subfadenon
+undoIgnoreSubthreadAccessKey=M
 # LOCALIZATION NOTE (ignoredThreadFeedback): #1 is the message thread title
-ignoredThreadFeedback=Replies to the thread "#1" will not be shown.
+ignoredThreadFeedback=Respondoj en la fadeno “#1” ne estos montrataj.
 # LOCALIZATION NOTE (ignoredSubthreadFeedback): #1 is the message subthread title
 ignoredSubthreadFeedback=Replies to the subthread "#1" will not be shown.
 # LOCALIZATION NOTE (ignoredThreadsFeedback): Semi-colon list of plural forms.
