--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -765,9 +765,9 @@ undoIgnoreThreadAccessKey=M
 undoIgnoreSubthread=Malfari ignori subfadenon
 undoIgnoreSubthreadAccessKey=M
 # LOCALIZATION NOTE (ignoredThreadFeedback): #1 is the message thread title
-ignoredThreadFeedback=Respondoj en la fadeno “#1” ne estos montrataj.
+ignoredThreadFeedback=Respondoj al la fadeno “#1” ne estos montrataj.
 # LOCALIZATION NOTE (ignoredSubthreadFeedback): #1 is the message subthread title
-ignoredSubthreadFeedback=Replies to the subthread "#1" will not be shown.
+ignoredSubthreadFeedback=Respondoj al la subfadeno “#1” ne estos montrataj.
 # LOCALIZATION NOTE (ignoredThreadsFeedback): Semi-colon list of plural forms.
 # #1 is the number of threads
 ignoredThreadsFeedback=Replies to the thread that was selected will not be shown.;Replies to the #1 threads that were selected will not be shown.
