Pontoon: Update Norwegian Nynorsk (nn-NO) localization of Firefox Co-authored-by: Björn I. <bjorni.svindseth@yahoo.com>

--- a/nn-NO/dom/chrome/dom/dom.properties
+++ b/nn-NO/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=Mislykka delingsoperasjon.
 WebShareAPI_Aborted=Avbroten delingsoperasjon.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Hindra navigering til «%1$S» på grunn av ein ukjend protokoll.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Kan ikkje sende melding som inneheld eit delt minneobjekt til eit cross-origin-vindauge.
