Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -770,32 +770,32 @@ ignoredThreadFeedback=Respondoj al la fadeno “#1” ne estos montrataj.
 ignoredSubthreadFeedback=Respondoj al la subfadeno “#1” ne estos montrataj.
 # LOCALIZATION NOTE (ignoredThreadsFeedback): Semi-colon list of plural forms.
 # #1 is the number of threads
-ignoredThreadsFeedback=Replies to the thread that was selected will not be shown.;Replies to the #1 threads that were selected will not be shown.
+ignoredThreadsFeedback=Respondoj al la elektita fadeno ne estos montrataj.;Respondoj al la #1 elektitaj fadenoj ne estos montrataj.
 # LOCALIZATION NOTE (ignoredSubthreadsFeedback): Semi-colon list of plural forms.
 # #1 is number of subthreads
-ignoredSubthreadsFeedback=Replies to the subthread that was selected will not be shown.;Replies to the #1 subthreads that were selected will not be shown.
+ignoredSubthreadsFeedback=Respondoj al la elektita subfadeno ne estos montrataj.;Respondoj al la #1 elektitaj subfadenoj ne estos montrataj.
 # LOCALIZATION NOTE (saveAsType): replace %S with the extension of the file to be saved.
-saveAsType=%S file
+saveAsType=dosiero %S
 
 # LOCALIZATION NOTE (openSearch.label): The label used in the autocomplete
 # widget to refer to a search on the web for a short string containing at most
 # 15 characters. %1$S is the search provider to use. %2$S is the string to
 # search for.
-openSearch.label=Search %1$S for "%2$S"
+openSearch.label=Serĉi “%2$S” per %1$S
 
 # LOCALIZATION NOTE (openSearch.label.truncated): The label used in the
 # autocomplete widget to refer to a search on the web for a short string
 # containing more than 15 characters. %1$S is the search provider to use. %2$S
 # is the string to search for, truncated to 15 characters.
-openSearch.label.truncated=Search %1$S for "%2$S…"
+openSearch.label.truncated=Serĉi “%2$S…” per %1$S
 
 # LOCALIZATION NOTE (aboutDialog.architecture.*):
 # The sixtyFourBit and thirtyTwoBit strings describe the architecture of the
 # current Thunderbird build: 32-bit or 64-bit. These strings are used in parentheses
 # after the Thunderbird version in the About dialog,
 # e.g.: "48.0.2 (32-bit)" or "51.0a1 (2016-09-05) (64-bit)".
-aboutDialog.architecture.sixtyFourBit = 64-bit
-aboutDialog.architecture.thirtyTwoBit = 32-bit
+aboutDialog.architecture.sixtyFourBit = 64-bita
+aboutDialog.architecture.thirtyTwoBit = 32-bita
 
 
 # LOCALIZATION NOTE (panel.back):
