--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -797,7 +797,9 @@ openSearch.label.truncated=Serĉi “%2$S…” per %1$S
 aboutDialog.architecture.sixtyFourBit = 64-bita
 aboutDialog.architecture.thirtyTwoBit = 32-bita
 
+errorConsoleTitle = Konzolo de eraroj
 
 # LOCALIZATION NOTE (panel.back):
 # This is used by screen readers to label the "back" button in various browser
 # popup panels, including the sliding subviews of the appmenu.
+panel.back = Reen
