Pontoon: Update Norwegian Nynorsk (nn-NO) localization of Firefox Co-authored-by: Björn I. <bjorni.svindseth@yahoo.com>

--- a/nn-NO/netwerk/necko.properties
+++ b/nn-NO/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Lagringstilgang vart automatisk tilde
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Lagringstilgang vart automatisk tildelt for sporfølgjaren "%2$S" på "%1$S".
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Lagringstilgang tildelt for opphav «%2$S» på «%1$S».
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Lagringstilgang vart automatisk tildelt for opphav «%2$S» på «%1$S».
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Lagringstilgang vart automatisk tildelt for førstepartsisolasjon «%2$S» på «%1$S».
 
