Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/devtools/client/netmonitor.properties
+++ b/be/devtools/client/netmonitor.properties
@@ -1279,6 +1279,7 @@ netmonitor.trackingResource.tooltip=Гэты URL-адрас супадае з в
 
 # LOCALIZATION NOTE (netmonitor.trackingResource.enhancedTrackingProtection): This is 
 # the label used in the Network monitor panel for showing enhanced tracking protection.
+netmonitor.trackingResource.enhancedTrackingProtection=Узмоцненая ахова ад сачэння
 
 # LOCALIZATION NOTE (netmonitor.context.copy): This is the label displayed
 # for the copy sub-menu in the context menu for a request
