Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/devtools/client/netmonitor.properties
+++ b/be/devtools/client/netmonitor.properties
@@ -1104,6 +1104,7 @@ netmonitor.headers.address=Адрас
 
 # LOCALIZATION NOTE (netmonitor.headers.status): This is the label displayed
 # in the network details headers tab identifying the status code.
+netmonitor.headers.status=Статус
 
 # LOCALIZATION NOTE (netmonitor.headers.size): This is the label displayed
 # in the network details headers tab identifying the size.
