Pontoon: Update Lithuanian (lt) localization of Firefox Co-authored-by: Paulius <paulius@mozilla.lt>

--- a/lt/devtools/client/debugger.properties
+++ b/lt/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=Rodyti peržiūrą eilutėje
 # for hiding the inline preview block
 inlinePreview.hide.label=Slėpti peržiūrą eilutėje
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.toggle.label=Kintamųjų peržiūra eilutėje
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Rodyti peržiūrą eilutėje, naudojantis derintuvės rengykle
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Derintuvės nuostatos
 
@@ -696,6 +704,14 @@ settings.disableJavaScript.label=Išjungti „JavaScript“
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=„JavaScipt“ bus išjungtas (reikės įkelti iš naujo)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+settings.toggleSourceMaps.tooltip=Įjunkite išteklių žemėlapius, norėdami, kad saityno kūrėjo priemonės įkeltų jūsų originalius išteklius kartu su sugeneruotais
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Išteklių žemėlapiai
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
