--- a/lt/devtools/client/toolbox.properties
+++ b/lt/devtools/client/toolbox.properties
@@ -274,6 +274,10 @@ toolbox.debugTargetInfo.type.tab=kortelė
 toolbox.debugTargetInfo.connection.usb=USB
 toolbox.debugTargetInfo.connection.network=Tinklas
 
+# LOCALIZATION NOTE (toolbox.debugTargetInfo.reload):
+# Used as the reload button tooltip
+toolbox.debugTargetInfo.reload=Įkelti iš naujo
+
 # LOCALIZATION NOTE (toolbox.debugTargetInfo.targetType.*): This is displayed as the
 # alt attribute for an icon in the toolbox header in about:devtools-toolbox,
 # to indicate what is the type of the debug target being inspected.
