Pontoon: Update Lithuanian (lt) localization of Firefox Co-authored-by: Paulius <paulius@mozilla.lt>

--- a/lt/netwerk/necko.properties
+++ b/lt/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Saugyklų prieiga automatiškai sutei
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Saugyklų prieiga automatiškai suteikta stebėjimo elementui „%2$S“ per „%1$S“.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Saugyklų prieiga suteikta serveriui „%2$S“ per „%1$S“.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Saugyklų prieiga automatiškai suteikta serveriui „%2$S“ per „%1$S“.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Priėjimas prie saugyklos automatiškai suteiktas „First-Party“ izoliacijai „%2$S“, esančiai „%1$S“.
 
