--- a/lt/dom/chrome/dom/dom.properties
+++ b/lt/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=Dalinimosi operacija nepavyko.
 WebShareAPI_Aborted=Dalinimosi operacija buvo nutraukta.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Neleista patekti į „%1$S“ dėl nežinomo protokolo.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Negalima persiųsti pranešimo, turinčio bendrintą atminties objektą, į „cross-origin“ langą.
