Pontoon: Update Georgian (ka) localization of Firefox Co-authored-by: G12r <georgianization@outlook.com>

--- a/ka/netwerk/necko.properties
+++ b/ka/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=საცავთან წვდო
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=საცავთან წვდომა ავტომატურად მიიღო “%2$S” მეთვალყურემ “%1$S-ზე”.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=საცავთან წვდომის მიმღების წარმომავლობაა „%2$S“ მისამართზე „%1$S“.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=საცავთან წვდომის ავტომატურად მიმღების წარმომავლობაა „%2$S“ მისამართზე „%1$S“.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=საცავთან წვდომა მიღებულია პირველი მხარის გამიჯვნისთვის „%2$S“ მისამართზე „%1$S“.
 
