Pontoon: Update Portuguese (Portugal) (pt-PT) localization of Firefox Co-authored-by: Cláudio Esperança <cesperanc@gmail.com>

--- a/pt-PT/netwerk/necko.properties
+++ b/pt-PT/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Acesso ao armazenamento concedido aut
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Acesso ao armazenamento concedido automaticamente para o rastreador “%2$S” em “%1$S”.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Foi concedido acesso ao armazenamento para a origem “%2$S” em “%1$S”.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Foi automaticamente concedido acesso ao armazenamento para a origem “%2$S” em “%1$S”.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Acesso de armazenamento concedido automaticamente para o isolamento de primeira linha “%2$S” em “%1$S”.
 
