--- a/pt-PT/dom/chrome/dom/dom.properties
+++ b/pt-PT/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=A operação de partilha falhou.
 WebShareAPI_Aborted=A operação de partilha foi abortada.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=A navegação para “%1$S” foi impedida devido a um protocolo desconhecido.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Não é possível enviar uma mensagem que contenha um objeto de memória partilhada para uma janela de origem cruzada.
