--- a/pt-PT/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/pt-PT/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -17,3 +17,4 @@ unknownCancel.label=Cancelar
 fileType=Ficheiro %S
 # LOCALIZATION NOTE (orderedFileSizeWithType): first %S is type, second %S is size, and third %S is unit  
 orderedFileSizeWithType=%1$S (%2$S %3$S)
+pdfHandlerDescription=Portable Document Format
