--- a/ka/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/ka/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -17,3 +17,4 @@ unknownCancel.label=გაუქმება
 fileType=%S ფაილი
 # LOCALIZATION NOTE (orderedFileSizeWithType): first %S is type, second %S is size, and third %S is unit  
 orderedFileSizeWithType=%1$S (%2$S %3$S)
+pdfHandlerDescription=გადასატანი დოკუმენტი
