Pontoon: Update English (Great Britain) (en-GB) localization of SeaMonkey Co-authored-by: Ian Neal <iann_bugzilla@blueyonder.co.uk>

--- a/en-GB/suite/chrome/browser/pageInfo.properties
+++ b/en-GB/suite/chrome/browser/pageInfo.properties
@@ -39,7 +39,7 @@ mediaDimensionsScaled=%Spx \u00D7 %Spx (scaled to %Spx \u00D7 %Spx)
 generalQuirksMode=Quirks mode
 generalStrictMode=Standards compliance mode
 generalNotCached=Not cached
-generalDiskCache=Disc cache
+generalDiskCache=Disk cache
 generalMemoryCache=Memory cache
 generalSize=%S kB (%S bytes)
 generalMetaTag=Meta (1 tag)
