--- a/en-GB/suite/chrome/mailnews/localMsgs.properties
+++ b/en-GB/suite/chrome/mailnews/localMsgs.properties
@@ -65,7 +65,7 @@ pop3UsernameFailure=Sending of username did not succeed.
 pop3PasswordFailed=Sending of password for user %1$S did not succeed.
 
 # Status - write error occurred
-pop3MessageWriteError=Unable to write the email to the mailbox. Make sure the file system allows you write privileges, and you have enough disc space to copy the mailbox.
+pop3MessageWriteError=Unable to write the email to the mailbox. Make sure the file system allows you write privileges, and you have enough disk space to copy the mailbox.
 
 # Status - pop3 server or folder busy
 # LOCALIZATION NOTE (pop3ServerBusy): Do not translate the word "%S" below.
@@ -110,7 +110,7 @@ movemailSpoolFileNotFound=Unable to locate mail spool file.
 #LOCALIZATION NOTE (movemailCantParseSpool): %S is file name
 movemailCantParseSpool=Unable to parse spool file %S. The file may be corrupt or not valid.
 
-pop3TmpDownloadError=There was an error downloading the following message:   \nFrom: %S\n   Subject: %S\n This message may contain a virus or there is not enough disc space. Skip this message?
+pop3TmpDownloadError=There was an error downloading the following message:   \nFrom: %S\n   Subject: %S\n This message may contain a virus or there is not enough disk space. Skip this message?
 
 # Status - the server doesn't support UIDL…
 # LOCALIZATION NOTE(pop3ServerDoesNotSupportUidlEtc): The following sentence should be translated in this way:
