--- a/en-GB/suite/chrome/mailnews/messenger.properties
+++ b/en-GB/suite/chrome/mailnews/messenger.properties
@@ -70,7 +70,7 @@ compactingFolder=Compacting folder %S…
 compactingDone=Done compacting (approx. %1$S saved).
 autoCompactAllFoldersTitle=Compact Folders
 # LOCALIZATION NOTE(autoCompactAllFoldersText): %1$S is the compaction gain.
-autoCompactAllFoldersText=Do you wish to compact all local and offline folders to save disc space? This will save about %1$S.
+autoCompactAllFoldersText=Do you wish to compact all local and offline folders to save disk space? This will save about %1$S.
 autoCompactAlwaysAskCheckbox=Always ask me before compacting folders automatically
 compactNowButton=Co&mpact Now
 
@@ -87,11 +87,11 @@ parsingFolderFailed=Unable to open the folder %S because it is in use by some ot
 deletingMsgsFailed=Unable to delete messages in folder %S because it is in use by some other operation. Please wait for that operation to finish and then try again.
 alertFilterCheckbox=Do not warn me again.
 compactFolderDeniedLock=The folder '%S' cannot be compacted because another operation is in progress. Please try again later.
-compactFolderWriteFailed=The folder '%S' could not be compacted because writing to folder failed. Verify that you have enough disc space, and that you have write privileges to the file system, then try again.
-compactFolderInsufficientSpace=Some folders (e.g. '%S') cannot be compacted because there is not enough free disc space. Please delete some files and try again.
+compactFolderWriteFailed=The folder '%S' could not be compacted because writing to folder failed. Verify that you have enough disk space, and that you have write privileges to the file system, then try again.
+compactFolderInsufficientSpace=Some folders (e.g. '%S') cannot be compacted because there is not enough free disk space. Please delete some files and try again.
 filterFolderHdrAddFailed=The messages could not be filtered to folder '%S' because adding a message to it failed. Verify that the folder is displaying properly or try to repair it from the folder properties.
-filterFolderWriteFailed=The messages could not be filtered to folder '%S' because writing to folder failed. Verify that you have enough disc space, and that you have write privileges to the file system, then try again.
-copyMsgWriteFailed=The messages could not be moved or copied to folder '%S' because writing to folder failed. To gain disc space, from the File menu, first choose Empty Deleted, and then choose Compact Folders, and then try again.
+filterFolderWriteFailed=The messages could not be filtered to folder '%S' because writing to folder failed. Verify that you have enough disk space, and that you have write privileges to the file system, then try again.
+copyMsgWriteFailed=The messages could not be moved or copied to folder '%S' because writing to folder failed. To gain disk space, from the File menu, first choose Empty Deleted, and then choose Compact Folders, and then try again.
 cantMoveMsgWOBodyOffline=While working offline, you cannot move or copy messages that were not downloaded for offline use. From the Mail window, open the File menu, choose Offline, then untick Work Offline, and then try again.
 operationFailedFolderBusy=The operation failed because an other operation is using the folder. Please wait for that operation to finish and then try again.
 folderRenameFailed=The folder could not be renamed. Perhaps the folder is being reparsed, or the new name is not a valid folder name.
