Pontoon: Update English (Great Britain) (en-GB) localization of SeaMonkey Co-authored-by: Ian Neal <iann_bugzilla@blueyonder.co.uk>

--- a/en-GB/suite/chrome/common/pref/prefutilities.properties
+++ b/en-GB/suite/chrome/common/pref/prefutilities.properties
@@ -4,10 +4,10 @@
 
 cachefolder=Choose Cache Folder
 #LOCALIZATION NOTE (%1$S) is the size and (%2$S) is the unit of disk space.
-cacheSizeInfo=Your cache is currently using %1$S %2$S of disc space.
+cacheSizeInfo=Your cache is currently using %1$S %2$S of disk space.
 
 # Offline apps
-offlineAppSizeInfo=Your offline storage currently uses %1$S %2$S of disc space.
+offlineAppSizeInfo=Your offline storage currently uses %1$S %2$S of disk space.
 offlineAppRemoveTitle=Remove offline web site data
 offlineAppRemovePrompt=After removing this data, %S will not be available offline.  Are you sure you want to remove this offline web site?
 offlineAppRemoveConfirm=Remove offline data
