--- a/en-GB/suite/chrome/mailnews/messenger.properties
+++ b/en-GB/suite/chrome/mailnews/messenger.properties
@@ -101,8 +101,8 @@ verboseFolderFormat=%1$S on %2$S
 filterFolderTruncateFailed=There was an error truncating the Inbox after filtering a message to folder '%1$S'. You may need to shutdown %2$S and delete INBOX.msf.
 
 mailboxTooLarge=The folder %S is full, and can't hold any more messages. To make room for more messages, delete any old or unwanted mail and compact the folder.
-outOfDiskSpace=There is not enough disc space to download new messages. Try deleting old mail, emptying the Deleted folder, and compacting your mail folders, and then try again.
-errorGettingDB=Unable to open the summary file for '%S'. Perhaps there was an error on disc, or the full path is too long.
+outOfDiskSpace=There is not enough disk space to download new messages. Try deleting old mail, emptying the Deleted folder, and compacting your mail folders, and then try again.
+errorGettingDB=Unable to open the summary file for '%S'. Perhaps there was an error on disk, or the full path is too long.
 
 defaultServerTag=(Default)
 
@@ -300,7 +300,7 @@ you must reconnect to the network, choose Offline from \
 the File menu and then untick Work Offline. \
 In the future, you can select which messages or folders to read offline. To do \
 this, choose Offline from the file menu and then select Download/Sync Now. \
-You can adjust the Disc Space preference to prevent the downloading of large \
+You can adjust the Disk Space preference to prevent the downloading of large \
 messages.
 
 # accountCentral
