Pontoon: Update Chinese (Taiwan) (zh-TW) localization of Firefox Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/devtools/client/layout.properties
+++ b/zh-TW/devtools/client/layout.properties
@@ -106,7 +106,7 @@ layout.displayLineNumbers=顯示行號
 
 # LOCALIZATION NOTE (layout.extendLinesInfinitely): Label of the extend lines
 # infinitely setting option in the CSS Grid panel.
-layout.extendLinesInfinitely=無限擴充行數
+layout.extendLinesInfinitely=無限延伸格線
 
 # LOCALIZATION NOTE (layout.header): The accordion header for the CSS Grid panel.
 layout.header=格線
