Pontoon: Update Dutch (nl) localization of Firefox Co-authored-by: Mark Heijl <markh@babelzilla.org>

--- a/nl/devtools/client/debugger.properties
+++ b/nl/devtools/client/debugger.properties
@@ -686,12 +686,13 @@ inlinePreview.show.label=Inlinevoorbeeld tonen
 # for hiding the inline preview block
 inlinePreview.hide.label=Inlinevoorbeeld verbergen
 
-# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
 # that will toggle display of inline preview
-inlinePreview.disable.label=Inlinevoorbeeld uitschakelen
+inlinePreview.toggle.label=Inline-voorbeeld van variabele
 
-# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
-# tooltip that will describe disabling inline preview
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Inline-voorbeeld in de debugger tonen
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Debugger-instellingen
@@ -704,11 +705,13 @@ settings.disableJavaScript.label=JavaScript uitschakelen
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Schakelt JavaScript uit (vernieuwen vereist)
 
-# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
-# tooltip for disabling source maps
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+settings.toggleSourceMaps.tooltip=Schakel Bronkaarten in om DevTools uw originele bronnen naast uw gegenereerde bronnen te laten laden
 
-# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
-# label for disabling source maps
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Bronkaarten
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
