--- a/nl/dom/chrome/dom/dom.properties
+++ b/nl/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=Het delen is mislukt.
 WebShareAPI_Aborted=Het delen is afgebroken.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Navigeren naar ‘%1$S’ is voorkomen vanwege een onbekend protocol.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Kan geen bericht met een gedeeld geheugenobject in een cross-origin-venster plaatsen.
