Pontoon: Update Frisian (fy-NL) localization of Firefox Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/fy-NL/dom/chrome/dom/dom.properties
+++ b/fy-NL/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=It dielen is mislearre.
 WebShareAPI_Aborted=It dielen is ôfbrutsen.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Navigearje nei ‘%1$S’ is opkeard fanwegen in ûnbekend protokol.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Kin gjin berjocht mei in dield ûnthâldobjekt yn in cross-origin-finster pleatse.
