--- a/fy-NL/netwerk/necko.properties
+++ b/fy-NL/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Tagong ta ûnthâld automatysk ferlie
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Tagong ta ûnthâld automatysk ferliend foar tracker ‘%2$S’ op ‘%1$S’.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Tagong ta ûnthâld ferliend foar oarsprong ‘%2$S’ op ‘%1$S’.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Tagong ta ûnthâld automatysk ferliend foar oarsprong ‘%2$S’ op ‘%1$S’.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Tagong ta ûnthâld automatysk ferliend foar isolaasje fan streekrjochte cookie ‘%2$S’ op ‘%1$S’.
 
